--- a/vignettes/realvignettes/ggbio.Rnw
+++ b/vignettes/realvignettes/ggbio.Rnw
@@ -24,9 +24,9 @@ options(replace.assign=TRUE,width=80)
 
 
 
-<<include=FALSE>>=
-opts_chunk$set(eval=FALSE)
-@
+%% <<include=FALSE>>=
+%% opts_chunk$set(eval=FALSE)
+%% @
 
 
 \newcommand{\Rfunarg}[1]{{\texttt{#1}}}
@@ -553,7 +553,7 @@ p
 @
 
 All those code could be simply constructed by following code
-<<eval = TRUE>>=
+<<>>=
 p <- ggbio() +
    circle(gr.crc1, geom = "link", linked.to = "to.gr", aes(color = rearrangements)) +
   circle(gr.crc1, geom = "point", aes(y = score, size = tumreads),
